@@ -59,6 +59,8 @@ Template for new versions:
 
 ## Misc Improvements
 
+- `suspendmanager`: Take in account walls planned on the z-layer below to determine accessibility to a job
+
 ## Documentation
 
 ## API
